fixes #1175: time lane scrolling out of screen

--- a/resources/assets/themes/base.scss
+++ b/resources/assets/themes/base.scss
@@ -189,7 +189,7 @@ table a > .icon-icon_angel {
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: stretch;
-  width: 100%;
+  width: max-content;
 
   .lane {
     background: $table-striped-bg;
